# AuditForge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rule_template_request.md
.github/workflows/: test.yml
docs/: release-notes-v0.2.0.md  report-template-examples.md
examples/: sample_findings.csv  sample_findings.json  sample_report.md  sample_web_findings.csv  sample_web_report.html  sample_web_report.md
src/auditforge/: __init__.py  __main__.py  cli.py  finding.py
src/auditforge/masking/: __init__.py  redactor.py
src/auditforge/parser/: __init__.py  csv_parser.py  json_parser.py
src/auditforge/report/: __init__.py  html.py  markdown.py
tests/: test_cli.py  test_masking.py  test_parser.py  test_report.py
