[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "auditforge"
version = "0.2.0"
description = "Convert security assessment findings into standardized Markdown reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AuditForge contributors" }
]
keywords = ["security", "reporting", "cli", "redaction"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

[project.scripts]
auditforge = "auditforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
